@@ -6,7 +6,6 @@ import java.awt.Font;
 import java.awt.geom.Point2D;
 
 import edu.colorado.phet.common.phetcommon.math.Function.LinearFunction;
-import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
 import edu.colorado.phet.common.piccolophet.nodes.ArrowNode;
@@ -64,9 +63,9 @@ public class BondTypeNode extends PComposite {
         maxLabelNode.setOffset( trackNode.getFullBoundsReference().getMaxX() - maxLabelNode.getFullBoundsReference().getWidth(),
                                 trackNode.getFullBoundsReference().getMaxY() + LABEL_Y_SPACING );
 
-        molecule.bond.dipole.addObserver( new VoidFunction1<ImmutableVector2D>() {
-            public void apply( ImmutableVector2D dipole ) {
-                thumbNode.setOffset( X_OFFSET_FUNCTION.evaluate( dipole.getMagnitude() ), thumbNode.getYOffset() );
+        molecule.bond.dipoleMagnitude.addObserver( new VoidFunction1<Double>() {
+            public void apply( Double magnitude ) {
+                thumbNode.setOffset( X_OFFSET_FUNCTION.evaluate( Math.abs( magnitude ) ), thumbNode.getYOffset() );
             }
         } );
     }
